// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="cvi-hits MyCustomHits"
  style={Object {}}
>
  <div
    className="cvi-hits-list"
  >
    <div
      className="cvi-hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;

exports[`Hits accepts a hit prop 1`] = `
<div
  className="cvi-hits"
  style={Object {}}
>
  <div
    className="cvi-hits-list"
  >
    <div
      className="cvi-hits-item"
    >
      <div
        id="0"
      />
    </div>
    <div
      className="cvi-hits-item"
    >
      <div
        id="1"
      />
    </div>
    <div
      className="cvi-hits-item"
    >
      <div
        id="2"
      />
    </div>
  </div>
</div>
`;

exports[`Hits shows loading indicator when loading prop is true 1`] = `
<svg
  className="cvi-hits-loadingicon"
  height="18"
  stroke="#444"
  viewBox="0 0 38 38"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      strokeWidth="2"
      transform="translate(1 1)"
    >
      <circle
        cx="18"
        cy="18"
        r="18"
        strokeOpacity=".5"
      />
      <path
        d="M36 18c0-9.94-8.06-18-18-18"
      >
        <animateTransform
          attributeName="transform"
          dur="1s"
          from="0 18 18"
          repeatCount="indefinite"
          to="360 18 18"
          type="rotate"
        />
      </path>
    </g>
  </g>
</svg>
`;
